[package]
name = "high-level-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.55"
reqwest = { version = "0.11.9", features = ["blocking"] }
tokio = { version = "1.17.0", features = ["macros"] }
